@@ -2,7 +2,9 @@ Revision history for Net-XMPP2
 
          - fixed a bug in disconnect error reporting.
          - fixed bad parameter passing of AnyEvent::XMPP::Client to
-           AnyEvent::XMPP::IM::Account.
+           AnyEvent::XMPP::IM::Account, also 'host' is used for overriding
+           the destination host now (and not 'domain', as it was in version
+           0.2).
 
 0.2 Sun Dec 28 15:09:25 CET 2008
          - Using the better tested AnyEvent::Handle and
